<resources>
    <string name="app_name">Menatee</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="update_profile">Update</string>
    <string name="sign_up">Sign Up</string>
    <string name="logging_in">Logging in…</string>
    <string name="signing_up">Signing up…</string>
    <string name="fetching_users">Fetching users…</string>
    <string name="fetch_user_profile">Fetching user profile…</string>
    <string name="logging_successful">Logging successful</string>
    <string name="registration_successful">Registration successful. Please confirm your email!</string>
    <string name="update_successful">Update profile was successful!</string>
    <string name="username_or_email">Username or Email</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_conditions_acceptance_statement">By checking this box, I affirm that I have read and accept to be bound by the AnitaB.org <a href="https://ghc.anitab.org/code-of-conduct/">Code of Conduct</a>, <a href="https://anitab.org/terms-of-use/">Terms</a>, and <a href="https://anitab.org/privacy-policy/">Privacy Policy</a>. Further, I consent to the use of my information for the stated purpose.</string>
    <string name="error_not_matching_passwords">Passwords didn\'t match!</string>
    <string name="error_password_too_weak">Your password is too weak! Use at least one small and capital letter, one number and one special sign!</string>
    <string name="error_please_check_internet">Please check your internet connection</string>
    <string name="error_request_timed_out">Request timed out</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_empty_password_confirmation">Password confirmation cannot be empty</string>
    <string name="error_empty_username">Username/Email cannot be empty</string>
    <string name="error_empty_email">Email cannot be empty</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_profile">Profile</string>
    <string name="navigation_title_relation">Relation</string>
    <string name="navigation_title_members">Members</string>
    <string name="navigation_title_requests">Requests</string>
    <string name="popup_menu_feedback">Feedback</string>
    <string name="popup_menu_about">About</string>
    <string name="popup_menu_settings">Settings</string>
    <string name="popup_menu_logout">Logout</string>
    <string name="popup_menu_delete_account">Delete my account</string>
    <string name="fragment_title_home">Home</string>
    <string name="fragment_title_members">Members</string>
    <string name="fragment_title_profile">My Profile</string>
    <string name="fragment_title_edit_profile">Edit Profile</string>
    <string name="fragment_title_relation">Current Relation</string>
    <string name="fragment_title_requests">Mentorship Requests</string>
    <string name="fragment_title_about">About</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="send_request">Send request</string>
    <string name="member_profile">Member Profile</string>
    <string name="bio">Bio</string>
    <string name="slack_username">Slack username</string>
    <string name="interests">Interests</string>
    <string name="occupation">Occupation</string>
    <string name="organization">Organization</string>
    <string name="location">Location</string>
    <string name="skills">Skills</string>
    <string name="available_to_mentor">Available to mentor</string>
    <string name="need_mentoring">Need mentoring</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="available_to_mentor_and_mentee">Available to mentor and be a mentee</string>
    <string name="only_available_to_mentor">Only available to mentor</string>
    <string name="only_available_to_mentee">Only available to be a mentee</string>
    <string name="not_available_to_mentor_or_mentee">Not available to be a mentor or a mentee</string>
    <string name="both_users_only_available_to_mentor">This request is not possible because both users are only ‘available to mentor\'</string>
    <string name="user_photo">User Photo</string>
    <string name="pending">Pending</string>
    <string name="past">Past</string>
    <string name="all">All</string>
    <string name="fetching_requests">Fetching Requests</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="notes">Notes</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="request_direction_formatted">%1$s %2$s</string>
    <string name="empty_pending_requests">You don\'t have any pending mentorship requests</string>
    <string name="empty_past_requests">You don\'t have any past mentorship requests</string>
    <string name="empty_requests">You don\'t have any mentorship requests</string>
    <string name="request_detail">Request Detail</string>
    <string name="mentor">Mentor</string>
    <string name="mentee">Mentee</string>
    <string name="end_date">End date</string>
    <string name="request_sent_by_other_user_message">%1$s wants to be your %2$s until %3$s</string>
    <string name="request_sent_by_current_user_message">You want to be %1$s\'s %2$s until %3$s</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="relation_end_date_has_passed">The end date for this request has passed!</string>
    <string name="relation_state_message">This relation was %1$s!</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="updating_profile">Updating profile…</string>
    <string name="end_date_label">End Date:</string>
    <string name="i_will_be_a">I will be a …</string>
    <string name="end_date_format">dd/mm/YYYY</string>
    <string name="no_current_mentorship_relation">You are not in a current mentorship relation.</string>
    <string name="notes_empty_error">Notes cannot be empty</string>
    <string name="available_to_be_mentor_mentee">Available to be a:</string>
    <string name="settings">Settings</string>
    <string name="error_name_too_short">Name should have a minimum of %1$d characters</string>
    <string name="error_name_too_long">Name should have a maximum of %1$d characters</string>
    <string name="model_task_1">Add Projects section to CV</string>
    <string name="model_task_2">Prepare questions for Job Interview X</string>
    <string name="model_task_3">Share a Professional update on Twitter</string>
    <string name="details">Details</string>
    <string name="tasks">Tasks</string>
    <string name="add_new_task">Add a new task</string>
    <string name="fetching_current_relation">Fetching Current Relation information…</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="accepted_requests">Accepted Requests</string>
    <string name="rejected_requests">Rejected Requests</string>
    <string name="completed_relations">Completed Relations</string>
    <string name="welcome">Welcome</string>
    <string name="no_recent_achievements">No recent achievements</string>
    <string name="recent_achievements">Recent Achievements</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="confirm_logout_msg">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="confirm_cancel_relation">Yes</string>
    <string name="cancel_relation_text">Are you sure you want to cancel the relation?</string>
    <string name="cancel_relation_title">Cancel Relation</string>
    <string name="empty_members_list">There are no other members.</string>
    <string name="cancel_relation_denied">No</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="ok">OK</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account?</string>
    <string name="delete_account_msg">Are you sure you want to delete your account?</string>
    <string name="password_updated">Password updated successfully!</string>
    <string name="account_deleted">Account was deleted successfully!</string>
    <string name="current_new_password_should_not_same">Current and New passwords should not be same</string>
    <string name="about">About</string>
    <string name="exit_toast">Press BACK again to exit</string>
    <string name="about_systers">Manatee Mentor is a mentor matching system originally developed by Systers, an international community for women in technology. Manatee is based in-part on their open source mentoring system.</string>
    <string name="about_systers_sec">Manatee Mentor is an expansion of their original vision, our goal is to connect young people globally to experienced mentors, who can help coach them through their goals.</string>
    <string name="about_systers_three">Manatee Mentor is a product of Glean Innovation Lab (www.glean.net). We focus on developing technology tools for social good.</string>
    <string name="our_github_link">Our Github Link</string>
    <string name="github_repository">Github Repository</string>
    <string name="our_website">Our Website</string>
    <string name="systers_open_source_zulip">AnitaB.org Zulip</string>
    <string name="error_checkbox">Please choose at least one of the following options.\n You may change it later</string>
    <string name="both">Both</string>
    <string name="next">Next</string>
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="great_now_we_d_like_to_understand_what_skills_you_have_that_you_d_like_to_share_with_our_community">Great, now we\'d like to understand what skills you have that you\'d like to share with our community?</string>
    <string name="finally_tell_us_about_why_you_are_here_and_what_you_are_looking_to_accomplish_this_will_be_available_on_your_public_profile">Finally, tell us about why you are here and what you are looking to accomplish. This will be available on your public profile.</string>
    <string name="step_3_of_3">Step 3 of 3</string>
    <string name="bio_tell_us_about_yourself">Bio - Tell us about yourself</string>
    <string name="why_are_you_here_what_are_you_looking_to_achieve">Why are you here? What are you looking to achieve?</string>
    <string name="and_most_importantly_would_you_like_to_be_a_mentor_or_mentee">And most importantly, would you like to be a mentor or mentee?</string>
    <string name="sign_me_up">SIGN ME UP!</string>
    <string name="mentoring">MENTORING</string>
    <string name="your_active_mentees">Your Active Mentees</string>
    <string name="message">MESSAGE</string>
    <string name="call">CALL</string>
    <string name="assign_a_task">ASSIGN A TASK</string>
</resources>